--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -5,9 +5,11 @@
 section {
   height: 100vh;
   height: 100dvh;
+  width: 100%;
   overflow-y: auto;
   padding: 32px;
   @include dFlex($fd: column, $jc: space-between);
+  @include generalMaxWidth();
 
   > header {
     @include dFlex($jc: space-between);
